<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtNomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputNomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNomeCompleto" />

    <TextView
        android:id="@+id/txtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputNomeCompleto" />

    <EditText
        android:id="@+id/inputTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTelefone" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTelefone" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <CheckBox
        android:id="@+id/ckListaEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail" />

    <TextView
        android:id="@+id/txtSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ckListaEmail" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSexo">

        <RadioButton
            android:id="@+id/radioSexoMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_text_sexo_masculino" />

        <RadioButton
            android:id="@+id/radioSexoFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="@string/radio_text_sexo_feminino" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/inputCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCidade" />

    <TextView
        android:id="@+id/txtUF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCidade" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUF" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="150dp"
        android:layout_marginStart="70dp"
        android:layout_height="wrap_content"
        android:text="@string/button_limpar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/button_salvar"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintStart_toEndOf="@+id/btnLimpar"/>
</androidx.constraintlayout.widget.ConstraintLayout>